--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.8.1",
+    "moment": "^2.30.1",
+    "mongoose": "^8.10.1",
+    "next": "15.0.2",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.6",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
+    "resend": "^4.2.0",
+    "swiper": "^11.2.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
