--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
